Add slides to the intro part of MLW
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/intro/intro.yml
+++ b/shared/latex/mlops/intro/intro.yml
@@ -1,6 +1,14 @@
+default_titles:
+  intro: Survol
+  ml-lifecycle: Cycle de vie d'un projet ML
+  ethics: ML \& éthique
 flavors:
   mlw:
+    - intro
+    - /questions
     - ml-lifecycle
     - /questions
+    - ethics
+    - /questions
 
-title: Cycle de vie d'un projet ML
+title: Introduction au MLOps
