Add PCA to model compression
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/modeling/compression/compression.yml
+++ b/shared/latex/mlops/modeling/compression/compression.yml
@@ -8,12 +8,12 @@ flavors:
   mlw:
     - intro
     - /questions
+    - $/unsupervised/dimensionality-reduction: mlb
     - pruning
     - /questions
     - quantization
     - /questions
     - lora
-    - /questions
     - /questions
     - tp
 
