Add title slides for labs
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/intro/intro.yml
+++ b/shared/latex/mlops/intro/intro.yml
@@ -1,7 +1,9 @@
 default_titles:
+  ethics: ML \& éthique
   intro: Survol
   ml-lifecycle: Cycle de vie d'un projet ML
-  ethics: ML \& éthique
+  tp: Travaux pratiques
+
 flavors:
   mlw:
     - intro
