Add slides to MLW
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/data/processing/processing.yml
+++ b/shared/latex/mlops/data/processing/processing.yml
@@ -1,4 +1,6 @@
 default_titles:
+  dvc: \texttt{dvc}~—~\textit{Data Version Control}
+  processing: Obtention, traçage \& transformation des données
   tp: Travaux pratiques
 
 flavors:
