Split MLW targets into 3 different days
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/mlw/targets.yml
+++ b/orsys/mlw/targets.yml
@@ -1,4 +1,4 @@
-- name: j123
+- name: j1
   title: MLOps, déploiement de Machine Learning en production
   sections:
     - path: about
@@ -10,9 +10,15 @@
     - path: mlops/data
       flavor: mlw
 
+- name: j2
+  title: MLOps, déploiement de Machine Learning en production
+  sections:
     - path: mlops/modeling
       flavor: mlw
 
+- name: j3
+  title: MLOps, déploiement de Machine Learning en production
+  sections:
     - path: mlops/production
       flavor: mlw
 
