Change the PCA labs
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/modeling/compression/compression.yml
+++ b/shared/latex/mlops/modeling/compression/compression.yml
@@ -7,7 +7,7 @@ default_titles:
 flavors:
   mlw:
     - intro
-    - $/unsupervised/dimensionality-reduction: mlb
+    - $/unsupervised/dimensionality-reduction: mlw
     - pruning
     - /questions
     - quantization
