--- a/shared/latex/nn/cnn/cnn.yml
+++ b/shared/latex/nn/cnn/cnn.yml
@@ -4,6 +4,7 @@ default_titles:
   interpret: Interpréter un modèle appris
   keras: Implémentation en Keras
   model: Modèle
+  model-light: Modèle
   modern-anomaly-detection: "Une méthode de détection d'anomalie moderne"
   modern-architectures: Architectures modernes
   demo-task: Démonstrations
@@ -16,10 +17,9 @@ flavors:
     - help-pointers
   mle:
     - data
-    - model
+    - model-light
     - /questions
     - tp-demo
-    - help-pointers
   drn:
     - data
     - model
