Skeleton for BDM and ML part
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/about/about.yml
+++ b/shared/latex/en/about/about.yml
@@ -25,4 +25,9 @@ flavors:
     - formateur
     - horaires-5j-sparks
     - tour2table
+  thales:
+    - formateur
+    - description
+    - schedule
+    - tour2table
 title: About the seminar
