--- a/shared/latex/en/tf-keras/tf-keras.yml
+++ b/shared/latex/en/tf-keras/tf-keras.yml
@@ -7,9 +7,9 @@ flavors:
     - /en/questions
     - tp-keras
   drn:
-    - tf
-    - keras
+    - keras: null
     - /en/questions
+    - demo-keras
   dpl:
     - tf
     - /en/questions
