Wrap up Data Science Project part of BDM
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/ml.yml
+++ b/shared/latex/en/ml/ml.yml
@@ -12,7 +12,7 @@ flavors:
     - evaluation-light
     - learning-light
     - /en/questions
-    - $/en/supervised: iao
+    - $/en/supervised: bdm
     - $/en/unsupervised: iao
     - $/en/rl: bdm
     - $/en/nn: bdm
