--- a/sparks-formation/INTRA/2024-02-thales/targets.yml
+++ b/sparks-formation/INTRA/2024-02-thales/targets.yml
@@ -10,3 +10,8 @@
     - path: en/ml
       flavor: bdm
       title: Machine Learning Fundamentals
+
+    - path: en/mlops
+      flavor: bdm
+
+    - contact
