Add data science section to BDM
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/INTRA/2024-02-thales/targets.yml
+++ b/sparks-formation/INTRA/2024-02-thales/targets.yml
@@ -7,6 +7,9 @@
     - path: en/big-data
       flavor: full
 
+    - path: en/data-science
+      flavor: full
+
     - path: en/ml
       flavor: bdm
       title: Machine Learning Fundamentals
