Improve big data for BDM
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/big-data/big-data.yml
+++ b/shared/latex/en/big-data/big-data.yml
@@ -1,4 +1,16 @@
+default_titles:
+  intro: Introduction
+  data-organization: Data Organization
+  governance: Governance
+  tools: Tools
+  conclusion: Conclusion
+
 flavors:
   full:
     - intro
+    - data-organization
+    - governance
+    - tools
+    - conclusion
+
 title: Big Data Fundamentals
