--- a/orsys/mlb/targets.yml
+++ b/orsys/mlb/targets.yml
@@ -41,6 +41,17 @@
       title: Auto-encodeurs (Bonus)
       flavor: dpl
 
+    - path: nn/rnn
+      title: Reccurent Neural Network (Bonus)
+      flavor: mlbonus
+
+    - path: nn/transformer
+      title: Transformer Network (Bonus)
+      flavor: drn
+
+    
+
+
 
 - name: j4
   title: Jour 4 --- Ingénierie
