bonus to sparks-formation/low

--- a/shared/latex/python/basics/basics.yml
+++ b/shared/latex/python/basics/basics.yml
@@ -56,6 +56,10 @@ flavors:
     - oop
     - /questions
     - tp-oop
+    - exceptions
+    - files
+    - /questions
+    - tp-files
 
   lpy:
     - support
