--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ Pillow = "^9"
 Pygments = "^2"
 matplotlib = "^3"
 pandas = "^1"
-python = ">= 3.8.1, < 3.11"
+python = ">= 3.8.1, <= 3.11.2"
 scikit-learn = "^1"
 scipy = "^1"
 seaborn = "^0.12"
