ça fait longtemps que j'ai pas commit...

--- a/shared/latex/engineering/engineering.yml
+++ b/shared/latex/engineering/engineering.yml
@@ -10,6 +10,8 @@ flavors:
     - data-sources
     - data-engineering
     - /questions
+  chd:
+    - engineering-practices
   deploying:
     - engineering-practices
     - data-engineering
