--- a/sparks-formation/pds/targets.yml
+++ b/sparks-formation/pds/targets.yml
@@ -1,20 +1,24 @@
 - name: j1
-  title: Jour 1
+  title: Python pour la Data Science
   sections:
     - path: about
-      flavor: sparks-formation-2j
+      flavor: sparks-formation-3j
 
     - path: python/basics
       flavor: full
 
-- name: j2
-  title: Jour 2
-  sections:
-    - path: python/testing
-      flavor: full
-
-    - path: python/linting
-      flavor: full
-
     - path: python/data-science
       flavor: full
+
+    - path: ml
+      flavor: mlb
+
+    - path: supervised
+      flavor: mlb
+
+    - path: unsupervised
+      flavor: mlb
+
+    - path: big-questions
+      flavor: full
+
