maj sparks/pds + orsys/drn

--- a/orsys/drn/targets.yml
+++ b/orsys/drn/targets.yml
@@ -13,6 +13,10 @@
     - path: supervised
       flavor: drn
 
+    - path: unsupervised
+      title: Apprentissage non-supervisé (Bonus)
+      flavor: intra-stmicro
+
     - path: nn
       flavor: drn
 
