--- a/sparks-formation/pds/targets.yml
+++ b/sparks-formation/pds/targets.yml
@@ -17,7 +17,7 @@
       flavor: mlb
 
     - path: unsupervised
-      flavor: mlb
+      flavor: bda
 
     - path: big-questions
       flavor: full
