ajout uml dans python basics

--- a/shared/latex/python/basics/basics.yml
+++ b/shared/latex/python/basics/basics.yml
@@ -122,6 +122,8 @@ flavors:
     - oop
     - tp-oop
     - /questions
+    - uml
+    - /questions
     - exceptions
     - /questions
     - native-functions
